# dev-bot

./: Cargo.toml  Dockerfile  LICENSE  README.MD
src/: main.rs  string_manip.rs
src/bot/: mod.rs
src/bot/commands/: mod.rs  shutdown.rs
src/executor/: bot.rs  mod.rs  redis.rs
src/redis_server/: command.rs  db.rs  mod.rs  redis_value.rs
src/web_server/: mod.rs
