[package]
name = "dev-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.3"
chrono = "0.4.38"
env_logger = "0.11.3"
lazy_static = "1.4.0"
log = "0.4.21"
redis = "0.25.3"
serde = { version = "1.0.197", features = ["derive"] }
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
